SERVER-16655 do not strip index tags from geo predicates during planning for V2 2dsphere indices