src/mongo/db/query/planner_ixselect.cpp
@@ -542,7 +542,11 @@ namespace mongo {
             size_t idx,
             const unordered_set<StringData, StringData::Hasher>& geoFields) {
 
-        if (Indexability::nodeCanUseIndexOnOwnField(node)) {
+        if (Indexability::nodeCanUseIndexOnOwnField(node)
+            && MatchExpression::GEO != node->matchType()
+            && MatchExpression::GEO_NEAR != node->matchType()) {
+            // We found a non-geo predicate tagged to use a V2 2dsphere index which is not
+            // and-related to a geo predicate that can use the index.
             removeIndexRelevantTag(node, idx);
             return;
         }
